--- a/index.html
+++ b/index.html
@@ -8,16 +8,20 @@
   </head>
   <body>
     <script src="script.js"></script>
+<!-- This is a comment -->
+<!-- Notice the "nesting" -->
     <h1>H1 is the largest and most important heading.</h1>
     <h2>H2 is the second largest heading.</h2>
     <h3>H3 is the third largest heading.</h3>
     <h4>H4 is the fourth largest heading.</h4>
     <h5>H5 is the fifth largest heading.</h5>
     <h6>H6 is the smallest heading.</h6>
+    <!-- View the page! -->
     <p>This is a regular paragraph. The default size is 16px with some space above and below. Let's see what happens when we type a hard return using the "enter" on our keyboard.</p>
     <p>This is the next paragraph on the page. Things are rolling along! What happens when we place a line break at the end of a sentence.<br/>
     We are in the same paragraph. See!</p>
     <p>This is the third paragraph on the page. Things continue to roll along! Here we go rolling and strolling. </p>
+    <!-- View the page! -->
     <p><a href="https://www.askdesign.biz">Hyperlink to ASK Design</a></p>
     <img src="images/2020-02-22-09.45.58-orchid-195.jpg" alt="orchid">
     &nbsp;<br/>
@@ -27,7 +31,8 @@
     <li>List item number 4</li>
     <li>List item number 5</li>
     <li>List item number 6</li>
-
+    
+<!-- Notice the "nesting" -->
     <ul>
       <li>List item number 1</li>
       <li>List item number 2</li>
