Fixed link to day2

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     <p>This is the third paragraph on the page. Things continue to roll along! Here we go rolling and strolling. </p>
     <!-- View the page! -->
     <p><a href="https://www.askdesign.biz">Hyperlink to ASK Design</a></p>
+   
     <img src="images/2020-02-22-09.45.58-orchid-195.jpg" alt="orchid">
     &nbsp;<br/>
     <li>List item number 1</li>
@@ -31,7 +32,7 @@
     <li>List item number 4</li>
     <li>List item number 5</li>
     <li>List item number 6</li>
-    
+
 <!-- Notice the "nesting" -->
     <ul>
       <li>List item number 1</li>
@@ -85,6 +86,7 @@
         <td>Boston, MA</td>
         <td>Basketball Player</td>
       </tr>
+       <p><a href="day2.html">day2</a></p>
     </table>
 
   </body>
