Added Samples, Hyperlinks

--- a/index.html
+++ b/index.html
@@ -22,7 +22,22 @@
     We are in the same paragraph. See!</p>
     <p>This is the third paragraph on the page. Things continue to roll along! Here we go rolling and strolling. </p>
     <!-- View the page! -->
+    <h3>Hyperlinks</h3>
     <p><a href="https://www.askdesign.biz">Hyperlink to ASK Design</a></p>
+    <h4>Absolute URLs</h4>
+    <p><a href="https://www.w3.org/">W3C</a></p>
+    <p><a href="https://www.google.com/">Google</a></p>
+
+    <h4>Relative URLs</h4>
+    <p><a href="/sample-relative-link.html">Relative Link page</a></p>
+    <p><a href="/sample-tutorial.html">Tutorial page</a></p>
+
+    <h4>Target Attribute</h4>
+    <p><a href="https://www.w3.org/" target="_self">W3C</a></p>
+    <p><a href="https://www.github.com/" target="_blank">Github</a></p>
+    <p><a href="https://www.google.com/" target="_parent" >Google</a></p>
+    <p><a href="/sample-relative-link.html" target="_top">Relative Link page</a></p>
+    <p><a href="/sample-tutorial.html" target="_self">Tutorial page</a></p>
    
     <img src="images/2020-02-22-09.45.58-orchid-195.jpg" alt="orchid">
     &nbsp;<br/>
@@ -86,7 +101,7 @@
         <td>Boston, MA</td>
         <td>Basketball Player</td>
       </tr>
-       <p><a href="day2.html">day2</a></p>
+       <p><a href="/day2.html">day2</a></p>
     </table>
 
   </body>
