Day 2 - added more link samples and started nav menu

--- a/day2.html
+++ b/day2.html
@@ -8,7 +8,25 @@
   </head>
   <body>
     <script src="script.js"></script>
-    <h1>HTML Layout Elements</h1>
+    <h1>Diving Deeper into HTML</h1>
+    <h2>More About Links</h2>
+    <h3>Image as Link</h3>
+    <p><a href="/sample-tutorial.html" target="_self"><img src="images/2020-02-22-09.45.58-orchid-195.jpg" alt="orchid">
+    &nbsp;<br/></a></p>
+
+<!-- Find Your Own Image and Place it in the document -->
+    <p><a href="https://massart.edu/"><img src="images/massart-cacphome.jpg" alt="massart"></a>
+    &nbsp;<br/>
+<!-- What happens when we move the image? -->
+
+    <h3>Email Address</h3>
+    <a href="mailto:someone@example.com">Send email</a>
+    <a href="mailto:anne@askdesign.biz">CONTACT US</a>
+    <h3>Button Links</h3>
+    <button onclick="document.location='sample-relative-link.html'">Button Link</button>
+
+    <h2>Navigation Menus</h2>
+
 
     <h2>HTML5 Semantic Elements</h2>
       <ul>
