--- a/index.html
+++ b/index.html
@@ -41,6 +41,10 @@
    
     <img src="images/2020-02-22-09.45.58-orchid-195.jpg" alt="orchid">
     &nbsp;<br/>
+<!-- Find Your Own Image and Place it in the document -->
+    <img src="images/massart-cacphome.jpg" alt="massart">
+    &nbsp;<br/>
+
     <li>List item number 1</li>
     <li>List item number 2</li>
     <li>List item number 3</li>
@@ -101,8 +105,9 @@
         <td>Boston, MA</td>
         <td>Basketball Player</td>
       </tr>
-       <p><a href="/day2.html">day2</a></p>
     </table>
+
+    <h4><a href="/day2.html">day2</a></h4>
 
   </body>
 </html>
