Lesson continued with day 2. More examples for text, images. Nav, semantics.

--- a/day2.html
+++ b/day2.html
@@ -9,6 +9,9 @@
   <body>
     <script src="script.js"></script>
     <h1>Diving Deeper into HTML</h1>
+    <h2>More About Text</h2>
+    <p>When you want to emphasize something, you might use <strong>bold</strong> or <em>italics</em>.</p>
+
     <h2>More About Links</h2>
     <h3>Image as Link</h3>
     <p><a href="/sample-tutorial.html" target="_self"><img src="images/2020-02-22-09.45.58-orchid-195.jpg" alt="orchid">
@@ -26,20 +29,28 @@
     <button onclick="document.location='sample-relative-link.html'">Button Link</button>
 
     <h2>Navigation Menus</h2>
+    <p>Are you getting tired of clicking on the link at the bottom of the home page? LOL</p> 
+    <p>Let's build a nav menu!<br>
+    STEP 1: create a list<br>
+    STEP 2: add hyperlinks to each list item<br>
+    STEP 3: test!
+    <ul>
+      <li><a href="index.html">Home<a></li>
+      <li>Day 2</li>
+      <li>Day 3</li>
+    </ul>
+
+    <h2>More About Images</h2>
+    <h3>Size, position, optimization</h3>
+    <p><a href="/sample-tutorial.html" target="_self"><img src="images/2020-02-22-09.45.58-orchid-195.jpg" alt="orchid" width="100";></a>
+
 
 
     <h2>HTML5 Semantic Elements</h2>
-      <ul>
-        <li>< header > - Defines a header for a document or a section</li>
-      <li>< nav > - Defines a set of navigation links</li>
-      <li>< section > - Defines a section in a document</li>
-      <li>< article > - Defines an independent, self-contained content</li>
-      <li>< aside > - Defines content aside from the content (like a sidebar)</li>
-      <li>< footer > - Defines a footer for a document or a section</li>
-      <li>< details > - Defines additional details that the user can open and close on demand</li>
-      <li>< summary > - Defines a heading for the < details > element</li>
-You can read more about semantic elements in our HTML Semantics chapter.
-    </ul>
+    <p><img src="images/html-semantics-element-diagram.jpg" alt="html semantics diagram">
+
+    <h2>CSS</h2>
+
   </body>
 </html>
 
