Updates to day 1 and day 2

--- a/day4.html
+++ b/day4.html
@@ -3,13 +3,12 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <title>Front-End Fundamentals I - day 3</title>
+    <title>repl.it</title>
     <link href="style.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
     <script src="script.js"></script>
-
-
   </body>
 </html>
 
+https://www.w3schools.com/css/css_navbar.asp
