Day 2 - Added code samples

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
   <body>
     <script src="script.js"></script>
 
-    <h3><a href="/day2.html">day2</a></h3>
-    <h4><a href="/day3.html">day3</a></h4>
+    <h3><a href="day2.html">day2</a></h3>
+    <h4><a href="day3.html">day3</a></h4>
 <!-- This is a comment -->
     <h1>H1 is the largest and most important heading.</h1>
     <h1>H1 - only 1 per page.</h1>
@@ -36,23 +36,23 @@
 
     <h4>Relative URLs</h4>
 <!-- Notice the "nesting" -->
-    <p><a href="/sample-relative-link.html">Relative Link page</a></p>
-    <p><a href="/sample-tutorial.html">Tutorial page</a></p>
-    <p><a href="/images/relative-link-demo.html">demo page</a></p>
+    <p><a href="sample-relative-link.html">Relative Link page</a></p>
+    <p><a href="sample-tutorial.html">Tutorial page</a></p>
+    <p><a href="images/relative-link-demo.html">demo page</a></p>
 
     <h4>Target Attribute</h4>
     <p><a href="https://www.w3.org/" target="_self">W3C</a></p>
     <p><a href="https://www.github.com/" target="_blank">Github</a></p>
     <p><a href="https://www.google.com/" target="_parent" >Google</a></p>
-    <p><a href="/sample-relative-link.html" target="_top">Relative Link page</a></p>
-    <p><a href="/sample-tutorial.html" target="_self">Tutorial page</a></p>
+    <p><a href="sample-relative-link.html" target="_top">Relative Link page</a></p>
+    <p><a href="sample-tutorial.html" target="_self">Tutorial page</a></p>
    
-    <img src="/images/2020-02-22-09.45.58-orchid-195.jpg" alt="orchid">
+    <img src="images/2020-02-22-09.45.58-orchid-195.jpg" alt="orchid">
     &nbsp;<br/>
 <!-- Find Your Own Image and Place it in the document -->
-    <img src="/images/massart-cacphome.jpg" alt="massart">
+    <img src="images/massart-cacphome.jpg" alt="massart">
     &nbsp;<br/>
-    <img src="/demo-folder/portil1920-encouragement.png" alt="massart">
+    <img src="demo-folder/portil1920-encouragement.png" alt="massart">
     &nbsp;<br/>
 
     <li>List item number 1</li>
@@ -94,7 +94,7 @@
     </dl>
 
 <!-- Quote! -->
-    <quote>"Either the well was very deep, or she fell very slowly, for she had plenty of time as she went down to look about her and to wonder what was going to happen next….then she looked at the sides of the well, and noticed that they were filled with cupboards and book-shelves; here and there she saw maps and pictures hung upon pegs. She took down a jar from one of the shelves as she passed; it was labelled ‘ORANGE MARMALADE’, but to her great disappointment it was empty: (Ch. 1)"</quote>
+    <blockquote>"Either the well was very deep, or she fell very slowly, for she had plenty of time as she went down to look about her and to wonder what was going to happen next….then she looked at the sides of the well, and noticed that they were filled with cupboards and book-shelves; here and there she saw maps and pictures hung upon pegs. She took down a jar from one of the shelves as she passed; it was labelled ‘ORANGE MARMALADE’, but to her great disappointment it was empty: (Ch. 1)"</blockquote>
     
 <!-- View the page! -->
 <!-- Check out the Source Code! -->
