add new html code

--- a/day2.html
+++ b/day2.html
@@ -9,6 +9,55 @@
 
   <body>
     <script src="script.js"></script>
+<!-- Basic Menu at top of page -->
+    <li><a href="index.html">day1</a></li>
+    <li><a href="day3.html">day3</a></li>
+    <h1>Diving Deeper</h1>
+    <h2>More HTML</h2>
+    <h3>More About Text</h3>
+    <p>When you want to emphasize something, you might use <strong>bold</strong> or <em>italics</em>.</p>
+
+    <h3>More About Links</h3>
+    <h4>Image as Link</h4>
+    <p><a href="sample-tutorial.html" target="_self"><img src="images/2020-02-22-09.45.58-orchid-195.jpg" alt="orchid"></a></p>
+
+    <!-- Find Your Own Image and Place it in the document -->
+    <p><a href="https://massart.edu/"><img src="images/massart-cacphome.jpg" alt="massart"></a>
+    <br/>
+<!-- What happens when we move the image? -->
+
+ <h4>Email Address</h4>
+    <p><a href="mailto:someone@example.com">Send email</a></p>
+    <a href="mailto:anne@askdesign.biz">CONTACT US</a><br/>
+    <h3>Button Links</h3>
+    <button onclick="document.location='sample-relative-link.html'">Button Link</button>
+
+  <h3>Navigation Menus</h3>
+    <p>Are you getting tired of clicking on the link at the bottom of the home page? LOL</p> 
+    <p>Let's build a nav menu!<br>
+    STEP 1: create a list<br>
+    STEP 2: add hyperlinks to each list item<br>
+    STEP 3: test!
+    <ul>
+      <li><a href="index.html">Home<a></li>
+      <li><a href="day2.html">Day 2</li>
+      <li><a href="day3.html">Day 3</li>
+    </ul>
+
+    <h3>More About Images</h3>
+    <h4>Size, optimization</h4>
+    <p><a href="sample-tutorial.html" target="_self"><img src="images/2020-02-22-09.45.58-orchid-195.jpg" alt="orchid" width="100";></a></p>
+
+        <h3>Character codes</h3>
+    <p>There are character codes for many different characters in many different languages<br>
+     <p><img src="images/example-characters.jpg" alt="character codes"></p>
+    Copyright symbol: &copy; ©<br>
+    Registered mark: &reg; ®<br>
+    Ampersand: &amp; &<br>
+    What the heck is this? &#167;<br>
+    A full list is available at <a href="https://dev.w3.org/html5/html-author/charref">https://dev.w3.org/html5/html-author/charref</a>
+
+
 
 
   </body>
