inline and internal stylesheets

--- a/day2.html
+++ b/day2.html
@@ -4,7 +4,43 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
     <title>Front-End Fundamentals I - day 2</title>
-    <link href="style.css" rel="stylesheet" type="text/css" />
+
+    <!-- Internal Style Sheet - Show Later -->
+  <style>
+body {
+  background-color: #e9ecee;
+}
+
+h1 {
+  font-family: Georgia;
+  font-size: 42px;
+  color: #9d3b3b;
+  margin-left: 40px;
+}
+
+p {
+  color: #0187d1;
+  width: 600px;
+  margin: 0 50% 12px 0;
+}
+/* --- comment out a css rule
+li, a {
+  color: #a61393;
+}
+--- */
+
+blockquote {
+  color: #0187d1;
+  width: 450px;
+  margin: 12px 0;
+  padding: 20px;
+  font-family: Georgia;
+  font-size: 36px;
+  text-align: center;
+  border: 1px solid #0187d1;
+}
+</style>
+<!-- End of Internal Style Sheet -->
   </head>
 
   <body>
@@ -57,7 +93,41 @@
     What the heck is this? &#167;<br>
     A full list is available at <a href="https://dev.w3.org/html5/html-author/charref">https://dev.w3.org/html5/html-author/charref</a>
 
+<!-- Inline -->
+    <h1>Default web fonts</h1>
+    <ul>
+      <li style="font-family: Arial">Arial (sans-serif)</li>
+      <li style="font-family:Verdana,sans-serif">Verdana (sans-serif)</li>
+      <li style="font-family: Helvetica">Helvetica, sans serif</li>
+      <li style="font-family: Tahoma">Tahoma (sans-serif)</li>
+      <li style="font-family: Trebuchet MS">Trebuchet MS (sans-serif)</li>
+      <li style="font-family: Times">Times New Roman (serif)</li>
+      <li style="font-family: Georgia">Georgia (serif)</li>
+      <li style="font-family: Garamond">Garamond (serif)</li>
+      <li style="font-family: Courier">Courier (monospace)</li>
+      <li style="font-family: Brush Script MT">Brush Script MT (cursive)</li>
+    </ul>
 
+   <h1>Default serif web font is Times Roman</h1>
+    <h1>Default h1 size is 2em (2x16px = 32px)</h2>
+    <h2 style="font-family: Helvetica; font-size: 34px">Headline 2 font changed to Helvetica; default is 1.5em (1.5x16px = 24px)</h2>
+    <h2 style="font-family: Arial; font-size: 28px;">Headline 2 in Arial, 28px</h2>
+    <h3 style="font-family: Tahoma">Headline 3 in Tahoma; default is 1.17em (18.72px)</h3>
+    <h3 style="font-family: Georgia; font-size: 20px";>Headline 3 in Georgia, 20px</h3>
+    <h4 style="font-family: Garamond";>Headline 4 in Garamond; default size is 1em</h4>
+    <h5 style="font-family: Courier; font-size: 28px">Headline 5 in Courier; default is .83em (13.28px)</h5>
+    <h6 style="font-family: Courier";>Headline 6 in Courier; default is .67em (10.72px)</h6>
+
+    <!-- paragraphs -->
+http://www.cupcakeipsum.com/
+    <p style="color:#8c178a">Default paragraph size is 16px. Let's grab some placeholder text. Cupcake ipsum dolor sit amet. Soufflé cake jujubes pie. Cheesecake candy canes jelly-o.
+
+    <p style="color:#8c178a">Fruitcake dessert marshmallow donut croissant jujubes. Soufflé sweet roll lemon drops gummies pudding cake tootsie roll. Marshmallow marshmallow tiramisu macaroon jujubes cake muffin. Dessert cheesecake candy canes oat cake sesame snaps biscuit liquorice gummi bears lemon drops.</p>
+
+    <p style="color:#0e0e43; background-color: #d4db1b">Donut chupa chups caramels tootsie roll candy canes croissant. Apple pie caramels cookie. Pie pastry dragée.</p>
+
+<!-- Let's style the Quote! -->
+    <blockquote>"Either the well was very deep, or she fell very slowly, for she had plenty of time as she went down to look about her and to wonder what was going to happen next….then she looked at the sides of the well, and noticed that they were filled with cupboards and book-shelves; here and there she saw maps and pictures hung upon pegs. She took down a jar from one of the shelves as she passed; it was labelled ‘ORANGE MARMALADE’, but to her great disappointment it was empty: (Ch. 1)"</blockquote>
 
 
   </body>
