--- a/day3.html
+++ b/day3.html
@@ -5,13 +5,21 @@
     <meta name="viewport" content="width=device-width">
     <title>Front-End Fundamentals I - day 3</title>
     <link href="style.css" rel="stylesheet" type="text/css" />
+
+
   </head>
   <body>
     <script src="script.js"></script>
 
 
 <!-- Basic Menu at top of page -->
-
+<h1>H1 is the largest and most important heading.</h1>
+<h1>H1 - only 1 per page.z</h1>
+<h2>H2 is the second largest heading.</h2>
+<h3>H3 is the third largest heading.</h3>
+<h4>H4 is the fourth largest heading.</h4>
+<h5>H5 is the fifth largest heading.</h5>
+<h6>H6 is the smallest heading.</h6>
 
 
   </body>
