Just playing with our external style sheet.

--- a/day3.html
+++ b/day3.html
@@ -13,6 +13,38 @@
 
 
 <!-- Basic Menu at top of page -->
+<header>
+    <nav><ul>
+    <li><a href="index.html">day1</a></li>
+    <li><a href="day2.html">day2</a></li>
+    </ul></nav>
+
+    <h1>Styling and Customizations</h1>
+</header>
+
+<main>
+  <section>
+    <article>
+    <h3>HTML5 Semantic Elements</h3>
+    <p><img src="images/html-semantics-element-diagram.jpg" alt="html semantics diagram"></p>
+    </article>
+    <article>
+    <h2>Visual Studio Code</h2>
+    </article>
+    <article>
+    <h2>Github Desktop</h2>
+    </article>
+  </section>
+
+  <section>
+    <h2>More CSS</h2>
+    <h3>IDs and Classes</h3>
+    <h3>CSS exercises - <a href="https://www.w3schools.com/css/exercise.asp">W3 School exercises </a></h3>
+  </section>
+
+
+
+
 <h1>H1 is the largest and most important heading.</h1>
 <h1>H1 - only 1 per page.z</h1>
 <h2>H2 is the second largest heading.</h2>
