Added new things to our style sheet.

--- a/day3.html
+++ b/day3.html
@@ -37,10 +37,46 @@
   </section>
 
   <section>
+    <article>
     <h2>More CSS</h2>
     <h3>IDs and Classes</h3>
     <h3>CSS exercises - <a href="https://www.w3schools.com/css/exercise.asp">W3 School exercises </a></h3>
+    </article>
   </section>
+
+  <section>
+    <article>
+    <h3>Divs and Floats</h3>
+    <h3>Layout</h3>
+    <h4>Review: HTML5 Semantic Elements</h4>
+    <p><img src="images/html-semantics-element-diagram.jpg" alt="html semantics diagram"></p>
+    </article>
+
+    <article>
+    <ul>
+      <li>Google Chrome Dev Tools</li>
+      <li>Google Fonts</li>
+      <li>Bootstrap Framework</li>
+      <li>Alternatives to divs and floats: flexbox, grid</li>
+      <ul>
+        <li>https://www.w3schools.com/css/css3_flexbox.asp</li>
+        <li>https://css-tricks.com/snippets/css/a-guide-to-flexbox/</li>
+        <li>https://www.w3schools.com/css/css_grid.asp</li>
+        <li>https://css-tricks.com/snippets/css/complete-guide-grid/
+</li>
+    </ul></ul>
+    </article>  
+    </section>
+
+    <section>
+    <article>
+<!-- Commit changes to Git -->
+    <p><a href="https://massart.edu/"><img src="images/massart-cacphome.jpg" alt="massart"></a>
+    <br/>
+<!-- Quiz -->
+<a href="https://www.w3schools.com/quiztest/quiztest.asp?qtest=CSS">CSS Quiz</a>
+    </article>
+    </section>
 
 
 
