We added classes and one ID

--- a/day3.html
+++ b/day3.html
@@ -14,9 +14,10 @@
 
 <!-- Basic Menu at top of page -->
 <header>
-    <nav><ul>
+    <nav id="primary-nav"><ul>
     <li><a href="index.html">day1</a></li>
     <li><a href="day2.html">day2</a></li>
+    <li><a class="active" href="day3.html">day3</a></li>
     </ul></nav>
 
     <h1>Styling and Customizations</h1>
