--- a/day3.html
+++ b/day3.html
@@ -83,8 +83,8 @@
 
 
 <h1>H1 is the largest and most important heading.</h1>
-<h1>H1 - only 1 per page.z</h1>
-<h2>H2 is the second largest heading.</h2>
+<h2>H1 - only 1 per page.z</h2>
+<h2 class="centered">H2 is the second largest heading.</h2>
 <h3>H3 is the third largest heading.</h3>
 <h4>H4 is the fourth largest heading.</h4>
 <h5>H5 is the fifth largest heading.</h5>
