--- a/day3.html
+++ b/day3.html
@@ -81,16 +81,35 @@
 
 
 
+    <div class="column-1">
+      <h1>H1 is the largest and most important heading.</h1>
+      <h2>H1 - only 1 per page.z</h2>
+      <h2 class="centered">H2 is the second largest heading.</h2>
+      <h5>H5 is the fifth largest heading.</h5>
+      <h6>H6 is the smallest heading.</h6>
+      <p class="column"></p>Let's type some text here and see what happens. Let's type some text here and see what happens. Let's type some text here and see what happens. Let's type some text here and see what happens. Let's type some text here and see what happens. Let's type some text here and see what happens. Let's type some text here and see what happens. Let's type some text here and see what happens. Let's type some text here and see what happens. Let's type some text here and see what happens. Let's type some text here and see what happens. Let's type some text here and see what happens. </p>
+    </div>
 
-<h1>H1 is the largest and most important heading.</h1>
-<h2>H1 - only 1 per page.z</h2>
-<h2 class="centered">H2 is the second largest heading.</h2>
-<h3>H3 is the third largest heading.</h3>
-<h4>H4 is the fourth largest heading.</h4>
-<h5>H5 is the fifth largest heading.</h5>
-<h6>H6 is the smallest heading.</h6>
+    <div class="column-2">
+      <h1>H1 is the largest and most important heading.</h1>
+      <h2>H1 - only 1 per page.z</h2>
+      <h2 class="centered">H2 is the second largest heading.</h2>
+      <h5>H5 is the fifth largest heading.</h5>
+      <h6>H6 is the smallest heading.</h6>
+      <p class="column"></p>Let's type some text here and see what happens. Let's type some text here and see what happens. Let's type some text here and see what happens. Let's type some text here and see what happens. Let's type some text here and see what happens. Let's type some text here and see what happens. Let's type some text here and see what happens. Let's type some text here and see what happens. Let's type some text here and see what happens. Let's type some text here and see what happens. Let's type some text here and see what happens. Let's type some text here and see what happens. </p>
+    </div>
+    
+    <div class="column-3">
+      <h5>H5 is the fifth largest heading.</h5>
+      <h6>H6 is the smallest heading.</h6>
+      <p class="column">Let's type some text here and see what happens. Let's type some text here and see what happens. Let's type some text here and see what happens. Let's type some text here and see what happens. Let's type some text here and see what happens. Let's type some text here and see what happens. Let's type some text here and see what happens. Let's type some text here and see what happens. Let's type some text here and see what happens. Let's type some text here and see what happens. Let's type some text here and see what happens. Let's type some text here and see what happens. </p>
+      <p class="column"></p>Let's type some text here and see what happens. Let's type some text here and see what happens. Let's type some text here and see what happens. Let's type some text here and see what happens. Let's type some text here and see what happens. Let's type some text here and see what happens. Let's type some text here and see what happens. Let's type some text here and see what happens. Let's type some text here and see what happens. Let's type some text here and see what happens. Let's type some text here and see what happens. Let's type some text here and see what happens. </p>
+      <p class="column"></p>Let's type some text here and see what happens. Let's type some text here and see what happens. Let's type some text here and see what happens. Let's type some text here and see what happens. Let's type some text here and see what happens. Let's type some text here and see what happens. Let's type some text here and see what happens. Let's type some text here and see what happens. Let's type some text here and see what happens. Let's type some text here and see what happens. Let's type some text here and see what happens. Let's type some text here and see what happens. </p>
+    </div>
+    
 
 
+</main>
   </body>
 </html>
 
