Day 4 - Contact form and sections
HTML and CSS form different forms.
Added sections to each form.

--- a/day2.html
+++ b/day2.html
@@ -15,6 +15,8 @@
 <!-- Basic Menu at top of page -->
     <li><a href="index.html">day1</a></li>
     <li><a href="day3.html">day3</a></li>
+    <li><a href="day4.html">day4</a></li>
+
     <h1>Diving Deeper</h1>
     <h2>More HTML</h2>
     <h3>More About Text</h3>
