--- a/day3.html
+++ b/day3.html
@@ -18,6 +18,7 @@
     <li><a href="index.html">day1</a></li>
     <li><a href="day2.html">day2</a></li>
     <li><a class="active" href="day3.html">day3</a></li>
+    <li><a href="day4.html">day4</a></li>
     </ul></nav>
 
     <h1>Styling and Customizations</h1>
