--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
 
     <h3><a href="day2.html">day2</a></h3>
     <h4><a href="day3.html">day3</a></h4>
+    <li><a href="day4.html">day4</a></li>
+
 <!-- This is a comment -->
     <h1>H1 is the largest and most important heading.</h1>
     <h1>H1 - only 1 per page.</h1>
