CSS - nav and media queries
CSS - nav and media queries

--- a/day4.html
+++ b/day4.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <title>repl.it</title>
+    <title>Front-End Fundamentals I - day 4</title>
     <link href="style.css" rel="stylesheet" type="text/css" />
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;0,700;1,400;1,700&family=Source+Serif+Pro:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
@@ -13,7 +13,7 @@
 
     <!-- Styled Menu at top of page -->
 <header>
-  <nav id="primary-nav"><ul>
+  <nav class="primary-nav"><ul>
   <li><a href="index.html">day1</a></li>
   <li><a href="day2.html">day2</a></li>
   <li><a href="day3.html">day3</a></li>
