--- a/day6.html
+++ b/day6.html
@@ -4,7 +4,7 @@
 <!-- ASK COMMENT - meta tags go in the head section -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <title>Front-End Fundamentals I - day 5</title>
+    <title>Front-End Fundamentals I - day 6</title>
     <link href="style.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
@@ -12,7 +12,13 @@
     <script src="script.js"></script>
 
 <!-- ASK COMMENT - hover and active states for nav -->
-<!-- ASK COMMENT - media queries for mobile responsiveness - see stylesheet -->
+<!-- ASK COMMENT - survey -->
+
+    <h4>(Class 6) Migrating and Cloning a  Site</h4>
+    <ul>
+        <li>Polish and deploy website for free through Github Pages </li>
+        <li>Survey - <a href="https://forms.gle/Cx9RaeoH6LvRiecVA">post-class survey</a></li>
+    </ul>
 
   </body>
 </html>
