All pages in nav menu
All pages in nav menu

--- a/day5.html
+++ b/day5.html
@@ -14,5 +14,18 @@
 <!-- ASK COMMENT - hover and active states for nav -->
 <!-- ASK COMMENT - media queries for mobile responsiveness - see stylesheet -->
 
+
+    <!-- Styled Menu at top of page -->
+    <header>
+      <nav class="primary-nav"><ul>
+      <li><a href="index.html">day1</a></li>
+      <li><a href="day2.html">day2</a></li>
+      <li><a href="day3.html">day3</a></li>
+      <li><a href="day4.html">day4</a></li>
+      <li><a class="active" href="day5.html">day5</a></li>
+      <li><a href="day6.html">day6</a></li>
+      </ul></nav>
+      </header>
+    
   </body>
 </html>
