--- a/day4.html
+++ b/day4.html
@@ -18,7 +18,9 @@
   <li><a href="day2.html">day2</a></li>
   <li><a href="day3.html">day3</a></li>
   <li><a class="active" href="day4.html">day4</a></li>
-  </ul></nav>
+  <li><a href="day5.html">day5</a></li>
+  <li><a href="day6.html">day6</a></li>
+</ul></nav>
 
   <h1>Styling and Customizations</h1>
 </header>
@@ -29,7 +31,9 @@
     <li><a href="index.html">day1</a></li>
     <li><a href="day2.html">day2</a></li>
     <li><a href="day3.html">day3</a></li>
-    <li><a class="active" href="day4.html">day3</a></li>
+    <li><a class="active" href="day4.html">day4</a></li>
+    <li><a href="day5.html">day5</a></li>
+    <li><a href="day6.html">day6</a></li>
     </ul></nav>
 </section>
 
