Showing Github stuff
Showing Github stuff

--- a/day6.html
+++ b/day6.html
@@ -31,5 +31,7 @@
         <li>Survey - <a href="https://forms.gle/Cx9RaeoH6LvRiecVA">post-class survey</a></li>
     </ul>
 
+    <p>Add a line</p>
+
   </body>
 </html>
